force-app/main/default/objects/Client_Household__c/Client_Household__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Client Household</label>
    <nameField>
        <label>Client Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Households</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>