force-app/main/default/objects/Client_Household__c/fields/All_Active_Services__c.field-meta.xml
<CustomField>
    <fullName>All_Active_Services__c</fullName>
    <label>All Active Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>