force-app/main/default/objects/Client_Household__c/fields/All_Programs__c.field-meta.xml
<CustomField>
    <fullName>All_Programs__c</fullName>
    <label>All Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>