force-app/main/default/objects/Client_Household__c/fields/Date_of_Most_Recent_Direct_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Most_Recent_Direct_Service__c</fullName>
    <label>Date of Most Recent Direct Service</label>
    <type>Date</type>
</CustomField>