force-app/main/default/objects/Client_Household__c/fields/Do_Not_Sync_Address__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Setting this option to true means that Household members will not have their Primary Address synchronized with the Client Household Mailing Address fields.</inlineHelpText>
    <label>Do Not Sync Address</label>
    <type>Checkbox</type>
</CustomField>