force-app/main/default/objects/Client_Household__c/fields/Household_Composition__c.field-meta.xml
<CustomField>
    <fullName>Household_Composition__c</fullName>
    <label>Household Composition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female Single Parent Household</fullName>
            </value>
            <value>
                <fullName>Grandparent(s) and Household</fullName>
            </value>
            <value>
                <fullName>Guardian(s) and Household</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Male Single Parent Household</fullName>
            </value>
            <value>
                <fullName>Two Parent Household</fullName>
            </value>
            <value>
                <fullName>Two Parent Household (2 Females)</fullName>
            </value>
            <value>
                <fullName>Two Parent Household (2 Males)</fullName>
            </value>
            <value>
                <fullName>Two Parent Household (Male and Female)</fullName>
            </value>
            <value>
                <fullName>Single Parent Household</fullName>
            </value>
            <value>
                <fullName>Two Person Household</fullName>
            </value>
            <value>
                <fullName>Three Person Household</fullName>
            </value>
            <value>
                <fullName>Four Person Household</fullName>
            </value>
            <value>
                <fullName>Five Person Household</fullName>
            </value>
            <value>
                <fullName>Six Person Household</fullName>
            </value>
            <value>
                <fullName>Seven Person Household</fullName>
            </value>
            <value>
                <fullName>Eight Person Household</fullName>
            </value>
            <value>
                <fullName>Other Multi-generational Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>