force-app/main/default/objects/Client_Household__c/fields/Household_Email__c.field-meta.xml
<CustomField>
    <fullName>Household_Email__c</fullName>
    <label>Household Email</label>
    <type>Email</type>
</CustomField>