force-app/main/default/objects/Client_Household__c/fields/Household_Members_Under_18__c.field-meta.xml
<CustomField>
    <fullName>Household_Members_Under_18__c</fullName>
    <description>maintained by trigger</description>
    <label>Household Members Under 18</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>