force-app/main/default/objects/Client_Household__c/fields/Household_Phone__c.field-meta.xml
<CustomField>
    <fullName>Household_Phone__c</fullName>
    <label>Household Phone</label>
    <type>Phone</type>
</CustomField>