force-app/main/default/objects/Client_Household__c/fields/Num_Group_Class_Direct_Services_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Num_Group_Class_Direct_Services_Enrolled__c</fullName>
    <label>Num Group/Class Direct Services Enrolled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>