force-app/main/default/objects/Client_Household__c/fields/Number_of_Active_Services__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Services__c</fullName>
    <description>maintained by trigger</description>
    <label>Number of Active Services</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>