force-app/main/default/objects/Client_Household__c/fields/Number_of_Completed_Case_Participations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Case_Participations__c</fullName>
    <label>Number of Completed Case Participations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>