force-app/main/default/objects/Client_Household__c/fields/Number_of_Condition_Two_Case_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Condition_Two_Case_Records__c</fullName>
    <description>Count set by Case Record trigger based on the number of Case Record records where Case_Record__c.HH_Condition_Two__c == &apos;Yes&apos;.</description>
    <label>Number of Condition Two Case Records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>