force-app/main/default/objects/Client_Household__c/fields/Number_of_Direct_Services_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Direct_Services_Enrolled__c</fullName>
    <label>Number of Direct Services Enrolled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>