force-app/main/default/objects/Client_Household__c/fields/Number_of_Groups_Classes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Groups_Classes__c</fullName>
    <label>Number of Groups/Classes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>