force-app/main/default/objects/Client_Household__c/fields/Number_of_Programs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs__c</fullName>
    <description>Maintained by trigger</description>
    <label>Number of Programs</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>