force-app/main/default/objects/Client_Household__c/fields/Sum_Group_Class_Direct_Services_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Sum_Group_Class_Direct_Services_Enrolled__c</fullName>
    <label>Sum Group/Class Direct Services Enrolled</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>