force-app/main/default/objects/Client_Household__c/fields/Sum_of_Direct_Services_Enrollled__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Direct_Services_Enrollled__c</fullName>
    <label>Sum of Direct Services Enrollled</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>