force-app/main/default/objects/Client_Household__c/recordTypes/ExpTest.recordType-meta.xml
<RecordType>
    <fullName>ExpTest</fullName>
    <active>true</active>
    <description>Used by unit tests -- do not modify or delete</description>
    <label>ExpTest</label>
</RecordType>