force-app/main/default/objects/Client_Household__c/recordTypes/ExpTest2.recordType-meta.xml
<RecordType>
    <fullName>ExpTest2</fullName>
    <active>true</active>
    <label>ExpTest2</label>
</RecordType>