force-app/main/default/objects/Client_Household__c/listViews/All_Households.listView-meta.xml
<ListView>
    <fullName>All_Households</fullName>
    <columns>NAME</columns>
    <columns>Mailing_City__c</columns>
    <columns>Household_Size__c</columns>
    <columns>Number_of_Active_Case_Records__c</columns>
    <columns>Number_of_Case_Records__c</columns>
    <columns>Number_of_Active_Services__c</columns>
    <columns>Number_of_Services__c</columns>
    <columns>Sum_of_Direct_Services_Enrollled__c</columns>
    <columns>Sum_of_Direct_Services_Not_Enrollled__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Households</label>
    <language>en_US</language>
</ListView>